<resources>
    <string name="app_name">SecP2P</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="kill_tor">Exit (stop tor service)</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="notifications">Notifications</string>
    <string name="sounds">Sounds</string>
    <string name="notifications_summary">Show a notification when a new message is received while the app is in the background.</string>
    <string name="sounds_summary">Play a sound when a new message is received.</string>
    <string name="menu_settings">Settings</string>
    <string name="no_contacts">No Contacts</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_requests">Requests</string>
    <string name="apply">Apply</string>
    <string name="alias_changed">Alias Changed</string>
    <string name="cancel">Cancel</string>
    <string name="add_contact">Add Contact</string>
    <string name="ok">OK</string>
    <string name="cannot_add_self">Cannot add self</string>
    <string name="failed_to_add_contact">Failed to add contact</string>
    <string name="contact_added">Contact added</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="enter_your_text_here_">Enter your text here...</string>
    <string name="send">Send</string>
    <string name="message_pending">Message pending</string>
    <string name="message_sent">Message sent</string>
    <plurals name="notification_new_messages">
        <item quantity="one">%d new message</item>
        <item quantity="other">%d new messages</item>
    </plurals>
    <plurals name="new_requests">
        <item quantity="one">You have %d pending request</item>
        <item quantity="other">You have %d pending requests</item>
    </plurals>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="contacts">Contacts</string>
    <string name="requests">Requests</string>
    <string name="no_requests">No Requests</string>
    <string name="contact_request_declined">Contact request declined</string>
    <string name="undo">Undo</string>
    <string name="open_chat">Open Chat</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="delete_contact_q">Delete contact?</string>
    <string name="really_delete_contact">Do you really want to delete %s from your contact list?</string>
    <string name="really_delete_message">Do you want to delete the message?</string>
    <string name="really_delete_all_message">Do you want to delete all the message?</string>
    <string name="title_change_alias">Change Alias</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="reset_all">Reset all</string>
    <string name="share">Share</string>
    <string name="change_alias">Change Alias</string>
    <string name="show_qr">Show QR</string>
    <string name="scan_qr">Scan QR</string>
    <string name="copy_id">Copy ID</string>
    <string name="about">About</string>
    <string name="connect">Connect</string>
    <string name="enter_id">Enter ID</string>
    <string name="connection_status">Tor Connection Status</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="invalid_qr_code">Invalid QR Code</string>
    <string name="contact_already_added">Contact already added</string>
    <string name="image">Select Image</string>
    <string name="video">Select Video</string>
    <string name="file">Select File</string>
    <string name="invalid_id">Invalid ID</string>
    <string name="use_dark_mode">Use Dark Mode</string>
    <string name="dark_mode_description">The app at night will be pleasing to eyes</string>
    <string name="copy_text">Copy Text</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="save_file">Save file</string>
    <string name="scanned_qr_code">I scanned QR code you showed me</string>
    <string name="ringtone">Ringtone</string>
    <string name="ringtone_summary">This sound will be played for new incoming message.</string>
    <string name="take_picture">Take Picture</string>
    <string name="record_video">Record Video</string>
    <string name="enter_description">Enter description for message</string>
    <string name="title_activity_send_media">SendMediaActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="search_message">Search Message</string>
    <string name="copy_my_id">Copy my ID</string>
    <string name="description">description</string>
    <string name="message">Message</string>
    <string name="date_and_time">Date and time</string>
    <string name="delete_message">Delete message</string>
    <string name="clear_all_messages">Clear all messages</string>
    <string name="quoted_message_not_present">This quoted message is not present, you might have deleted it!</string>
    <string name="title_activity_share_media">Share To…</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="share_with">Share with</string>
    <string name="send_to">Send to</string>
    <string name="export_summary">Create backup of your ID</string>
    <string name="export_id">Export ID</string>
    <string name="contact_already_present">Contact already present</string>
    <string name="id_registered">ID registered</string>
    <string name="tor_connected">Tor connected</string>
    <string name="internet_not_available">Internet not available</string>
    <string name="starting_">Starting...</string>
    <string name="registering_secp2p_id">Registering SecP2P ID </string>
    <string name="starting_tor_">Starting tor...</string>
    <string name="title_activity_request">Requests</string>
    <string name="enter_password_exported_id">Please enter password for the export ID</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="enter_password">Enter password</string>
    <string name="password_for_export_backup">ID Password</string>
    <string name="password_qualify">Password must have 1 numeric, 1 upper letter and 1 special character (@ # $ % ! .)</string>
    <string name="alias">Alias</string>
    <string name="id">ID</string>
    <string name="tell_about_yourself">Tell about yourself</string>
</resources>
