<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_copy_text"
        android:icon="@drawable/ic_copy"
        android:title="@string/copy_text" />
    <item

        android:id="@+id/action_forward"
        android:icon="@drawable/ic_forward"
        android:title="@string/forward" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete" />

    <item
        android:id="@+id/action_save_to"
        android:icon="@drawable/ic_save"
        android:title="@string/save_file" />

    <item
        android:id="@+id/action_share_with"
        android:icon="@drawable/ic_share"
        android:title="@string/share_with" />
</menu>