<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_dark"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search_message" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_menu_settings_dark"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_kill_tor"
        android:orderInCategory="100"
        android:title="@string/kill_tor"
        android:icon="@drawable/ic_close"
        app:showAsAction="never" />
</menu>
